--- a/.errordocs/missing.html
+++ b/.errordocs/missing.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--
-  _____ U _____ u__     __         _         _        ____    ____     
- |"_  /u\| ___"|/\ \   /"/u       |"|    U  /"\  u U | __")u / __"| u  
- U / //  |  _|"   \ \ / //      U | | u   \/ _ \/   \|  _ \/<\___ \/   
- \/ /_   | |___   /\ V /_,-.     \| |/__  / ___ \    | |_) | u___) |   
- /____|  |_____| U  \_/-(_/       |_____|/_/   \_\   |____/  |____/>>  
- _//<<,- <<   >>   //             //  \\  \\    >>  _|| \\_   )(  (__) 
-(__) (_/(__) (__) (__)           (_")("_)(__)  (__)(__) (__) (__)      
+  _____ U _____ u__     __         _         _        ____    ____
+ |"_  /u\| ___"|/\ \   /"/u       |"|    U  /"\  u U | __")u / __"| u
+ U / //  |  _|"   \ \ / //      U | | u   \/ _ \/   \|  _ \/<\___ \/
+ \/ /_   | |___   /\ V /_,-.     \| |/__  / ___ \    | |_) | u___) |
+ /____|  |_____| U  \_/-(_/       |_____|/_/   \_\   |____/  |____/>>
+ _//<<,- <<   >>   //             //  \\  \\    >>  _|| \\_   )(  (__)
+(__) (_/(__) (__) (__)           (_")("_)(__)  (__)(__) (__) (__)
 -->
 <html lang="en" itemscope itemtype="http://schema.org/Organization">
     <head>
@@ -20,10 +20,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta itemprop="name" content="Zev Labs">
         <meta itemprop="description" content="Zev Labs is a full stack web development studio based in San Diego, California. Let us build your next big idea!">
-        <meta itemprop="image" content="http://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
-        <meta itemprop="url" content="http://zevlabs.com">
-        <meta property="og:url" content="http://zevlabs.com">
-        <meta property="og:image" content="http://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
+        <meta itemprop="image" content="https://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
+        <meta itemprop="url" content="https://zevlabs.com">
+        <meta property="og:url" content="https://zevlabs.com">
+        <meta property="og:image" content="https://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
         <meta property="og:title" content="Zev Labs">
         <meta property="og:site_name" content="Zev Labs">
         <meta property="og:type" content="website">
@@ -33,24 +33,21 @@
         <meta name="twitter:title" content="Zev Labs">
         <meta name="twitter:description" content="Zev Labs is a full stack web development studio based in San Diego, California. Let us build your next big idea!">
         <meta name="twitter:creator" content="@danielzev">
-        <meta name="twitter:image:src" content="http://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
+        <meta name="twitter:image:src" content="https://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
         <meta name="twitter:domain" content="zevlabs.com">
         <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-57x57-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-touch-icon-114x114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144x144-precomposed.png">
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/zevlabs.css">
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Oxygen:400,700,300|Henny+Penny' rel='stylesheet' type='text/css'>
-        <!--[if lt IE 9]>
-            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+        <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700,300|Henny+Penny' rel='stylesheet' type='text/css'>
         <script src="/js/modernizr.custom.js"></script>
     </head>
     <body id="top">
-        <!-- Google Tag Manager --> 
-        <noscript><iframe src="http://www.googletagmanager.com/ns.html?id=GTM-NPS2SP"
+        <!-- Google Tag Manager -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NPS2SP"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -75,21 +72,20 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-                            <p>&copy; 2014 Zev Labs, LLC</p>
+                            <p>&copy; 2019 Zev Labs, LLC</p>
                         </div>
                         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
                             <p class="sn-links">
                                 <a href="https://twitter.com/zevlabs" target="_blank" title="twitter"><i class="fa fa-twitter-square"></i></a>
                                 <a href="https://www.facebook.com/zevlabs" target="_blank" title="facebook"><i class="fa fa-facebook-square"></i></a>
                                 <a href="https://www.google.com/+zevlabs" target="_blank" rel="publisher"><i class="fa fa-google-plus-square"></i></a>
-                                <!-- <a href="http://www.linkedin.com/company/zevlabs" target="_blank" title="linked-in"><i class="fa fa-linkedin-square"></i></a> -->
                             </p>
                         </div>
                     </div>
                 </div>
             </footer>
         </section>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     </body>
 </html>
