--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta itemprop="name" content="Zev Labs">
         <meta itemprop="description" content="Zev Labs is a full stack web development studio based in San Diego, California. Let us build your next big idea!">
-        <meta itemprop="image" content="http://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
-        <meta itemprop="url" content="http://zevlabs.com">
-        <meta property="og:url" content="http://zevlabs.com">
-        <meta property="og:image" content="http://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
+        <meta itemprop="image" content="https://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
+        <meta itemprop="url" content="https://zevlabs.com">
+        <meta property="og:url" content="https://zevlabs.com">
+        <meta property="og:image" content="https://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
         <meta property="og:title" content="Zev Labs">
         <meta property="og:site_name" content="Zev Labs">
         <meta property="og:type" content="website">
@@ -33,24 +33,21 @@
         <meta name="twitter:title" content="Zev Labs">
         <meta name="twitter:description" content="Zev Labs is a full stack web development studio based in San Diego, California. Let us build your next big idea!">
         <meta name="twitter:creator" content="@danielzev">
-        <meta name="twitter:image:src" content="http://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
+        <meta name="twitter:image:src" content="https://zevlabs.com/apple-touch-icon-144x144-precomposed.png">
         <meta name="twitter:domain" content="zevlabs.com">
         <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-57x57-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/apple-touch-icon-114x114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144x144-precomposed.png">
-        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/zevlabs.css">
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Oxygen:400,700,300|Henny+Penny' rel='stylesheet' type='text/css'>
-        <!--[if lt IE 9]>
-            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+        <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700,300|Henny+Penny' rel='stylesheet' type='text/css'>
         <script src="/js/modernizr.custom.js"></script>
     </head>
     <body data-spy="scroll" data-target="#navigation">
         <!-- Google Tag Manager -->
-        <noscript><iframe src="http://www.googletagmanager.com/ns.html?id=GTM-NPS2SP"
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NPS2SP"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -133,20 +130,20 @@
                                             <p>
                                                 Anything you can dream of, we can build it.
                                                 From websites to mobile apps, we deliver world-class applications.
-                                                <a href="http://www.aftermath.com" target="_blank">Aftermath</a> came to us for a site-wide rewrite of their current platform.
+                                                <a href="https://www.aftermath.com" target="_blank">Aftermath</a> came to us for a site-wide rewrite of their current platform.
                                                 They needed a fresh new look that supported both mobile and desktop, and be given the power to update the content on the site internally.
                                             </p>
                                         </div>
                                         <img src="images/aftermath.png" alt="Aftermath" class="img-responsive" />
                                         <p class="btn-wrp">
-                                            <a href="http://www.aftermath.com" target="_blank" class="c2a-button">Visit The Website</a>
+                                            <a href="https://www.aftermath.com" target="_blank" class="c2a-button">Visit The Website</a>
                                         </p>
                                     </div>
                                     <div class="item">
                                         <h2>Migrating to the Cloud</h2>
                                         <div class="caption">
                                             <p>
-                                                Companies like <a href="http://www.rackspace.com/cloud/" target="_blank">Rackspace</a> and <a href="http://aws.amazon.com" target="_blank">Amazon</a> are redefining web hosting with their Public Cloud Services.
+                                                Companies like <a href="https://www.rackspace.com/cloud/" target="_blank">Rackspace</a> and <a href="https://aws.amazon.com" target="_blank">Amazon</a> are redefining web hosting with their Public Cloud Services.
                                                 <a href="https://portfolium.com" target="_blank">Portfolium</a> recognized the power, scalability, and ease of control these systems provided them.
                                                 We moved them off of their shared hosting environment to Rackspace, where they now have a scalable solution in place at a fraction of the price.
                                             </p>
@@ -161,14 +158,14 @@
                                         <div class="caption">
                                             <p>
                                                 Do you want a personal or professional website that will stand out more than your LinkedIn profile?
-                                                Let us create a <a href="http://en.wikipedia.org/wiki/Responsive_web_design" target="_blank">responsive website</a> just for <strong>YOU!</strong>
-                                                We built <a href="http://gradypolcyn.com" target="_blank">Grady Polcyn's</a> website to help him promote his sales and recruitment efforts.
+                                                Let us create a <a href="https://en.wikipedia.org/wiki/Responsive_web_design" target="_blank">responsive website</a> just for <strong>YOU!</strong>
+                                                We built <a href="https://gradypolcyn.com" target="_blank">Grady Polcyn's</a> website to help him promote his sales and recruitment efforts.
                                                 Contact us below to get your FREE quote today!
                                             </p>
                                         </div>
                                         <img src="images/grady.png" alt="Grady Polcyn" class="img-responsive" />
                                         <p class="btn-wrp">
-                                            <a href="http://gradypolcyn.com" target="_blank" class="c2a-button">Visit The Website</a>
+                                            <a href="https://gradypolcyn.com" target="_blank" class="c2a-button">Visit The Website</a>
                                         </p>
                                     </div>
                                 </div>
@@ -210,22 +207,21 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-                            <p>&copy; 2014 Zev Labs, LLC</p>
+                            <p>&copy; 2019 Zev Labs, LLC</p>
                         </div>
                         <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
                             <p class="sn-links">
                                 <a href="https://twitter.com/zevlabs" target="_blank" title="twitter"><i class="fa fa-twitter-square"></i></a>
                                 <a href="https://www.facebook.com/zevlabs" target="_blank" title="facebook"><i class="fa fa-facebook-square"></i></a>
                                 <a href="https://www.google.com/+zevlabs" target="_blank" rel="publisher"><i class="fa fa-google-plus-square"></i></a>
-                                <!-- <a href="http://www.linkedin.com/company/zevlabs" target="_blank" title="linked-in"><i class="fa fa-linkedin-square"></i></a> -->
                             </p>
                         </div>
                     </div>
                 </div>
             </footer>
         </section>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
         <script src="/js/jquery.nav.js"></script>
         <script src="/js/jquery.scrollTo.js"></script>
         <script src="/js/jquery.ebcaptcha.js"></script>
